[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/pannel.png" type="Texture" id=2]
[ext_resource path="res://fonts/moon_get-Heavy.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/GameOverText.gd" type="Script" id=4]
[ext_resource path="res://sprites/Play.png" type="Texture" id=5]
[ext_resource path="res://scripts/PlayButton.gd" type="Script" id=6]
[ext_resource path="res://sprites/StoreButto!n.png" type="Texture" id=7]
[ext_resource path="res://sprites/muteBtn.png" type="Texture" id=8]
[ext_resource path="res://scripts/toggleMute.gd" type="Script" id=9]
[ext_resource path="res://sprites/theXone.png" type="Texture" id=10]

[sub_resource type="Animation" id=1]
resource_name = "come"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.225313, 1.86607, 1.8025 ),
"update": 0,
"values": [ Vector2( 0, -250 ), Vector2( 0, 1.2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "go"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1.68179, 0.210224, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -260 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "moveOut"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1.68179, 0.217638, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, -250 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1.68179, 1.68179, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1.2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("toggleMute:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.07, 0.07 ), Vector2( 0.065, 0.065 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("toggleMute:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.065, 0.065 ), Vector2( 0.07, 0.07 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.54902, 0.137255, 0.137255, 0 ), Color( 0.54902, 0.137255, 0.137255, 1 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.54902, 0.137255, 0.137255, 1 ), Color( 0.54902, 0.137255, 0.137255, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 210, 97.075 ), Vector2( 45, 95 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 170.0, 0.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.112656, 0.116629 ),
"update": 0,
"values": [ Vector2( 45, 345 ), Vector2( 45, 95 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 45, 95 ), Vector2( 210, 97.075 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 170.0 ]
}

[sub_resource type="Animation" id=16]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.267943, 0.143587 ),
"update": 0,
"values": [ Vector2( 45, 95 ), Vector2( 45, 345 ) ]
}

[node name="Menu" type="Node2D"]
position = Vector2( 0, -5 )
z_index = 2
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/come = SubResource( 1 )
anims/go = SubResource( 2 )
anims/moveOut = SubResource( 3 )
anims/moving = SubResource( 4 )
anims/mutePressed = SubResource( 5 )
anims/muteReleased = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 74, 125 )
scale = Vector2( 0.17, 0.2 )
texture = ExtResource( 2 )

[node name="High score" type="Label" parent="."]
editor/display_folded = true
modulate = Color( 0.501961, 0.172549, 0.172549, 1 )
margin_left = 38.1705
margin_top = 55.4068
margin_right = 111.171
margin_bottom = 81.4068
custom_fonts/font = SubResource( 7 )
text = "Best: 00"

[node name="AnimationPlayer" type="AnimationPlayer" parent="High score"]
anims/hide = SubResource( 8 )
anims/show = SubResource( 9 )

[node name="GameOver" type="Label" parent="."]
editor/display_folded = true
modulate = Color( 0.54902, 0.137255, 0.137255, 0 )
margin_left = 22.0
margin_top = 91.0
margin_right = 124.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 10 )
text = "Game Over"
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="GameOver"]
anims/Come = SubResource( 11 )
anims/goAway = SubResource( 12 )

[node name="Start" type="Button" parent="."]
editor/display_folded = true
margin_left = 51.5952
margin_top = 165.649
margin_right = 563.596
margin_bottom = 671.649
rect_scale = Vector2( 0.09, 0.09 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
align = 2
script = ExtResource( 6 )

[node name="Animation" type="AnimationPlayer" parent="Start"]
anims/come = SubResource( 13 )
anims/comeBack = SubResource( 14 )
anims/goAway = SubResource( 15 )
anims/moveAway = SubResource( 16 )

[node name="store" type="Button" parent="."]
margin_left = 106.568
margin_top = 188.113
margin_right = 609.568
margin_bottom = 632.113
rect_scale = Vector2( 0.07, 0.07 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="toggleMute" type="Button" parent="."]
margin_left = 5.7
margin_top = 187.35
margin_right = 508.7
margin_bottom = 631.35
rect_scale = Vector2( 0.07, 0.07 )
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 8 )
flat = true
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="toggleMute"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 160.231, 319.583 )
scale = Vector2( 0.550455, 0.550455 )
texture = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="store" to="." method="_on_store_pressed"]
[connection signal="button_down" from="toggleMute" to="toggleMute" method="_on_toggleMute_button_down"]
[connection signal="button_up" from="toggleMute" to="toggleMute" method="_on_toggleMute_button_up"]
[connection signal="pressed" from="toggleMute" to="toggleMute" method="_on_toggleMute_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
